<resources>
    <string name="app_name">THAIMAI</string>
    <string name="picmeid">PICME ID*</string>
    <string name="submit">Submit</string>
    <string name="picme">PICME ID</string>
    <string name="dob">Date of Birth*</string>
    <string name="logo">Logo</string>
    <string name="choose_lang">Choose Language</string>
    <string name="tamil">Tamil</string>
    <string name="english">English</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="err_msg_name">Enter Your full name</string>
    <string name="err_msg_picme">Enter Your Valid Picme ID</string>
    <string name="err_msg_dob">Enter Your DOB</string>
    <string name="err_msg_mobile">Enter Valid Mobile Number</string>
    <string name="err_msg_alterMobile">Enter Valid Alternative Mobile Number</string>
    <string name="yes">Yes</string>
    <string name="username">Username</string>
    <string name="register_below">REGISTER BELOW</string>
    <string name="week_details">Week Details</string>
    <string name="title_home">Home</string>
    <string name="vhn">VHN</string>
    <string name="health_record">Health Records</string>
    <string name="near_by_hospital">Near by Hospital</string>
    <string name="emergency_contact_name">Emergency contacts</string>
    <string name="view_reports">View Reports</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="toolbar_title">Choice Image</string>
    <string name="no_image">No Image</string>
    <string-array name="tab_titles">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string name="progress_title">Processing..</string>
    <string name="done">Done</string>
    <string name="max_count_msg">%1$d images selected already</string>
    <string name="min_count_msg">you have to choice %1$d images</string>
    <string name="focusing">focusing/flash...wait a minute</string>
    <string name="default_directory">Pictures</string>
    <string name="title_activity_maps">Map</string>
    <string name="date_of_visit">Date of Visit</string>
    <string name="date_details_timing">Date Details Timing</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="name_of_the_doctor">Name of the Doctor</string>
    <string name="visit_week">Visit Week</string>
    <string name="hospital_name">HospitalName</string>
    <string name="call">Call</string>
    <string name="name_of_the_hospital_1">Name of the Hospital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="completed_visits">COMPLETED VISITS</string>
    <string name="referral">Referral</string>
    <string name="health_tips">Health Tips</string>
    <string name="child_development">Child Development</string>
    <string name="hbnc">HBNC</string>
    <string name="due_date">Due Date</string>
    <string name="place">Place</string>
    <string name="weight">Weight (Kg)</string>
    <string name="temp">Temp ("\u00B0"C)</string>
    <string name="umbilical_stump">Umbilical Stump</string>
    <string name="cry">Cry</string>
    <string name="eyes">Eyes</string>
    <string name="skin">Skin</string>
    <string name="exclusive_breast_feeding">Breast Feeding</string>
    <string name="exclusive_breast_feeding_no_reasons">Reasons</string>
    <string name="outcome">Out Come</string>
    <string-array name="array_pn_hbnc_visit">

        <item>--Select--</item>
        <item>Visit 1 (Day 0)</item>
        <item>Visit 2 (Day 3)</item>
        <item>Visit 3 (Day 7)</item>
        <item>Visit 4 (Day 14)</item>
        <item>Visit 5 (Day 21)</item>
        <item>Visit 6 (Day 28)</item>
        <item>Visit 7 (Day 42)</item>

    </string-array>
    <string-array name="array_delivery_details">
        <item>--Select--</item>
        <item>Normal Vaginal Delivery</item>
        <item>Vaginal Assisted</item>
        <item>Elective LSCS</item>
        <item>Emergency LSCS</item>
    </string-array>
    <string-array name="array_umbilical_stump">
        <item>--Select--</item>
        <item>Healthy</item>
        <item>Unhealthy</item>
        <item>NA</item>
    </string-array>
    <string-array name="array_cry">
        <item>--Select--</item>
        <item>Normal</item>
        <item>Feeble</item>
        <item>Irritable</item>
    </string-array>
    <string-array name="array_eye">
        <item>--Select--</item>
        <item>Normal</item>
        <item>swollen</item>
        <item>Pus present</item>
        <item>Redness</item>
        <item>Yellowish</item>
    </string-array>
    <string-array name="array_skin">
        <item>--Select--</item>
        <item>Normal</item>
        <item>Redness</item>
        <item>Pustules</item>
        <item>Yellowish</item>
    </string-array>
    <string-array name="array_breast_feeding">
        <item>--Select--</item>
        <item>Yes</item>
        <item>No</item>
        <item>NA</item>
    </string-array>
    <string-array name="array_breast_feeding_no_reasons">
        <item>--Select--</item>
        <item>Mother dead</item>
        <item>Mother not able to get Milk</item>
        <item>Breast problem</item>
        <item>NA</item>
    </string-array>
    <string-array name="array_out_come">
        <item>--Select--</item>
        <item>No intervention</item>
        <item>Treated conservatively</item>
        <item>Require referral</item>
    </string-array>
    <string name="immunization">Immunization</string>
    <string name="opv">OPV</string>
    <string name="pentavalent">Pentavalent</string>
    <string name="rota">Rota</string>
    <string name="ipv">IPV</string>
    <string name="dose_number">Dose Number</string>
    <string-array name="array_immunization">
        <item>--Select--</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="post_natal">Post Natal</string>
    <string name="any_complient">Any Complaints</string>
    <string name="pulse_rate">Pulse rate</string>
    <string name="epistomy">Epistomy / Tear suture</string>
    <string name="pv_discharge">PV discharge</string>
    <string name="breast_examinatione">Breast Examination</string>
    <string-array name="array_pvdischarge">
        <item>--Select--</item>
        <item>Normal</item>
        <item>heavy bleeding</item>
        <item>Foul smelling</item>
    </string-array>
    <string-array name="array_post_natal_breast_feeding_no_reasons">
        <item>--Select--</item>
        <item>Baby dead</item>
        <item>No milk produced</item>
        <item>Milk amount not enough</item>
        <item>Breast problem</item>
    </string-array>
    <string-array name="array_breast_examinatione">
        <item>--Select--</item>
        <item>Normal</item>
        <item>Engorgement</item>
        <item>Skin redness</item>
        <item>Pain full</item>
        <item>Nipple Inverted</item>
        <item>Nipple Cracked</item>
    </string-array>
    <string-array name="array_name">
        <item>--Select--</item>
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
    <string name="referred_by">Referred by</string>
    <string-array name="array_facillity_type">
        <item>--Select--</item>
        <item>HSC</item>
        <item>UHP</item>
        <item>PNH</item>
        <item>HOME-TD</item>
        <item>HOME-UTD</item>
        <item>OTHERS</item>
        <item>PHC</item>
        <item>GH</item>
        <item>T-HOSP</item>
        <item>PANEL HOSPITAL</item>
    </string-array>
    <string-array name="array_ultrosonogram">
        <item>--Select--</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="type_of_visit">Type of Visit</string>
    <string-array name="yes_no">
        <item>--Select--</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="illness">

        <item>--Select--</item>
        <item>Hypertention</item>
        <item>Diabetes</item>
        <item>Congenital Heart Disease</item>
        <item>Tb</item>
        <item>Others</item>

    </string-array>
    <string-array name="illness_family">
        <item>--Select--</item>
        <item>Htn</item>
        <item>DM</item>
        <item>CHD</item>
        <item>TB</item>
        <item>Others</item>

    </string-array>
    <string-array name="pregnancy">
        <item>--Select--</item>
        <item>Hypertension</item>
        <item>Diabetes</item>
        <item>Congenital Heart Disease</item>
        <item>TB</item>
        <item>Others</item>
    </string-array>
    <string-array name="pregnancy_status">
        <item>--Select--</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>


    </string-array>
    <string-array name="mother_occupation_list">
        <item>--Select--</item>
        <item>Home Maker</item>
        <item>Private Sector</item>
        <item>Govt Sector</item>
    </string-array>
    <string-array name="husbands_occupation_list">
        <item>--Select--</item>
        <item>Home Maker</item>
        <item>Private Sector</item>
        <item>Govt Sector</item>
    </string-array>
    <string-array name="array_refrel_why">
        <item>--Select--</item>
        <item>Want of specialist</item>
        <item>Want Of Blood</item>
        <item>Need for special care</item>
        <item>No</item>
    </string-array>
    <string-array name="array_mother">
        <item>--Select--</item>
        <item>Alive</item>
        <item>Dead</item>
    </string-array>
    <string-array name="array_birth_details">
        <item>--Select--</item>
        <item>Term</item>
        <item>Preterm</item>
    </string-array>
    <string-array name="array_new_born">
        <item>--Select--</item>
        <item>Alive single</item>
        <item>Alive Multiple</item>
        <item>IUD Macerated</item>
        <item>IUD Fresh</item>
        <item>Neonatal Death </item>
    </string-array>
    <string-array name="refered_by">
        <item>--Select--</item>
        <item>SN</item>
        <item>MO</item>
        <item>Specialist</item>
    </string-array>
    <string-array name="complaints">
        <item>--Select--</item>
        <item>Fever</item>
        <item>Giddiness or Headache</item>
        <item>Vomiting</item>
        <item>Pain Abdomen</item>
        <item>Bleeding PV</item>
        <item>Foul smelling</item>
        <item>Breathlessness</item>
        <item>Pedal edema</item>
        <item>Burning Mictutrion</item>
        <item>Fits</item>
        <item>No Complaints</item>
        <item>Others</item>

    </string-array>
    <string-array name="blood_group_list">
        <item>--Select--</item>
        <item>A+ve</item>
        <item>A-ve</item>
        <item>B+ve</item>
        <item>B-ve</item>
        <item>O+ve</item>
        <item>O-ve</item>
        <item>AB+ve</item>
        <item>AB-ve</item>
        <item>Others</item>

    </string-array>
    <string-array name="reactive_non">
        <item>--Select--</item>
        <item>Reactive</item>
        <item>Non Reactive</item>
        <item>Not tested</item>

    </string-array>
    <string name="care_provided_date">Care Provided Date</string>
    <string name="primary_register">Primary Register</string>
    <string name="immunization_menu">Immunization</string>
    <string name="visit_entry">Visit Entry</string>
    <string name="delivery_entry">Delivery Entry</string>
    <string name="pn_hbnc_visit_entry">PN/HBNC Visit Entry</string>
    <string name="immunization_entry">Immunization Entry</string>
</resources>