<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/primary_register"
            android:icon="@drawable/primary_register"
            android:title="@string/primary_register" />

        <item
            android:id="@+id/nearbyhospital"
            android:icon="@drawable/hospital"
            android:title="@string/near_by_hospital" />

        <item
            android:id="@+id/immunization_menu"
            android:icon="@drawable/syringe"
            android:title="@string/immunization_menu" />

        <item
            android:id="@+id/visit_record"
            android:icon="@drawable/checkup"
            android:title="@string/visit_entry" />


        <item
            android:id="@+id/delivery_details_entry"
            android:icon="@drawable/pregnancy_delivery"
            android:title="@string/delivery_entry" />

        <item
            android:id="@+id/pn_hbnc_visit_entry"
            android:icon="@drawable/pn_hbnc_dropper"
            android:title="@string/pn_hbnc_visit_entry" />

        <item
            android:id="@+id/immunization_entry"
            android:icon="@drawable/immu_charity"
            android:title="@string/immunization_entry" />

        <item
            android:id="@+id/health_tips"
            android:icon="@drawable/first_aid"
            android:title="@string/health_tips" />

        <item
            android:id="@+id/child_development"
            android:icon="@drawable/mother_baby"
            android:title="@string/child_development" />


    </group>

</menu>
