<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/health_record" />


    <!--<item-->
        <!--android:id="@+id/visit"-->
        <!--android:icon="@drawable/ic_visit_24dp"-->
        <!--android:title="@string/referral"/>-->

    <item
        android:id="@+id/pn_HBNC_visit"
        android:title="PN / HBNC Visit"
        android:icon="@drawable/mother_and_baby"/>

    <item
        android:id="@+id/referral"
        android:icon="@drawable/warning_card_hand"
        android:title="@string/referral" />

    <!--<item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_vhn_24dp"
        android:title="@string/vhn" />-->

</menu>
