<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/infant_tracking"
    tools:context="com.unicef.thaimai.motherapp.activity.AddRecords">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:elevation="3dp"
            android:background="#5ac7bcbc"
            android:weightSum="2">

            <TextView
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="start"
                android:padding="2dp"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4.0dip"
                android:layout_marginRight="4.0dip"
                android:textColor="@color/text_secondary"
                android:text="Infant Visits"/>

            <TextView
                android:textSize="14sp"
                android:id="@+id/txt_edit"
                android:textStyle="bold"
                android:gravity="start|center"
                android:padding="2dp"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4.0dip"
                android:layout_marginRight="4.0dip"
                android:textColor="@color/text_secondary"
                android:drawableEnd="@drawable/edit_small"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hbnc"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/> <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Visit 1"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="21-02-2018"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/care_provided_date"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="21-02-2018"
                android:layout_weight="1"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="HSC"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="130"
                android:editable="false"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="75"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/umbilical_stump"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Healthy"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cry"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Normal"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/eyes"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Normal"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/eyes_color"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Normal"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/skin"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Normal"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exclusive_breast_feeding"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="No"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exclusive_breast_feeding_no_reasons"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Mother not able to get Mil"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/outcome"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="No intervention"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis_in"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_secondary"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#1e8ffe"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:id="@+id/btn_submit"
            android:padding="10dp"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>
